<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hacku_registration_header_text"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"/>

    <!-- Email Registration Box-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:hint="@string/registration_email_hint">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Password Box -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/registration_password_hint">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_create_acct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_btn_label"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>
</LinearLayout>