<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:background="#423e69"
    android:gravity="center">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/ic_launcher"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hacku_login_header_text"
        android:textSize="36sp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_marginBottom="50dp"/>

    <!-- Email Box-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email_hint"
        android:textColorHint="#FFFFFF"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Box -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint"
        android:textColorHint="#FFFFFF"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:maxLines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_hacku_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_label"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>
</LinearLayout>